--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <!-- Search Container -->
         <div
-          class="flex flex-col justify-between space-y-5 md:flex-row md:space-y-0"
+          class="flex flex-col justify-between space-y-5 gap-8 md:flex-row md:space-y-0"
         >
           <!-- Input and SVG Container -->
           <div class="flex justify-between border-b">
@@ -71,7 +71,7 @@
         </div>
 
     <!-- Gallery Container -->
-    <div class="grid gap-4 md:grid-cols-3">
+    <div class="grid gap-4 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5">
       <!-- Image 1 -->
     <div class="relative group">
       <img src="images/image1.jpg" alt="" class="w-72">
